corrected an error to a page

--- a/test2/index.html
+++ b/test2/index.html
@@ -14,7 +14,7 @@
       <button id="dialogCloseButton" autofocus>ok</button>
     </dialog>
     <div class="home-icon">
-      <a href="/homepage/index.html"
+      <a href="/index.html"
         ><img src="assets/home-icon.png" alt="home-icon"
       /></a>
     </div>
