improved music cube ui

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div class="menu">
-      <a href="test2/index.html" class="button"><button>PLAY</button></a>
-      <button class="button">OPTIONS</button>
-      <button class="button">EXIT</button>
+      <a href="test2/index.html" class="menu-button">PLAY</a>
+      <button class="menu-button">OPTIONS</button>
+      <button class="menu-button">EXIT</button>
     </div>
   </body>
 </html>
