--- a/test2/index.html
+++ b/test2/index.html
@@ -10,31 +10,33 @@
   </head>
   <body>
     <dialog id="introDialog">
-      <p>click ok</p>
-      <button id="dialogCloseButton" autofocus>ok</button>
+      <div class="title-bar">
+        <div class="title-left">
+          <div class="icon">!</div>
+          <span>Attention</span>
+        </div>
+        <div class="title-buttons">
+          <button>X</button>
+        </div>
+      </div>
+      <div class="window-body">
+        <p>Trigger Warning: Epilepsy !!!</p>
+      </div>
+      <div class="button-row">
+        <button id="dialogCloseButton" autofocus>OK</button>
+      </div>
     </dialog>
-    <div class="home-icon">
-      <a href="/index.html"
-        ><img src="assets/home-icon.png" alt="home-icon"
-      /></a>
-    </div>
-    <div class="reset-icon">
-      <button id="resetButton">
-        <img src="assets/reload-icon.png" alt="" />
-      </button>
-    </div>
-    <div id="resultDisplay"></div>
-    <div class="cubesContainer">
+    <div class="cubesCont">
       <button class="cube" data-value="1"></button>
       <button class="cube" data-value="2"></button>
       <button class="cube" data-value="3"></button>
       <button class="cube" data-value="4"></button>
       <button class="cube" data-value="5"></button>
       <button class="cube" data-value="6"></button>
-      <button class="cube" data-value="7"></button>
-      <button class="cube" data-value="8"></button>
-      <button class="cube" data-value="9"></button>
-      <button class="cube" data-value="10"></button>
+    </div>
+    <div class="footer-buttons">
+      <a href="/index.html" class="btn"><button>HOME</button></a>
+      <button id="resetButton">RESET</button>
     </div>
   </body>
 </html>
